# nvsleepify

./: Cargo.toml  LICENSE  Makefile  README.md  nvsleepify-tray.desktop  nvsleepify.service  nvsleepifyd.service  org.nvsleepify.conf
src/: client.rs  daemon.rs  lib.rs  main.rs  pci.rs  protocol.rs  system.rs
