[package]
name = "nvsleepify"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
regex = "1.10"
colored = "2.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
zbus = { version = "3.14", features = ["tokio"] }
futures-util = "0.3"
